[project]
name = "oort-shared"
version = "0.1.1"
description = "Shared JWT validation and identity context for OORT products"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "OORT Labs" },
]
keywords = ["oort", "jwt", "auth", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyjwt>=2.9.0",
    "fastapi>=0.115.0",
]

[project.urls]
Homepage = "https://github.com/oort-labs/oort-shared"
Repository = "https://github.com/oort-labs/oort-shared"
Changelog = "https://github.com/oort-labs/oort-shared/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oort_shared"]

[tool.hatch.build.targets.sdist]
include = [
    "src/oort_shared",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/oort_shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
